LU-8411 ofd: handle last_rcvd file can't update properly

last_rcvd update may fail but "no fail" return code will
be sent to client. DIO request may be replayed in that case instead
of resend, but as no fail return code send to client, user
application will free a buffer, so replay will be sent with incorrect
data.

Write should fail if last_rcvd can't update properly.

This patch causes sanity test 407 to fail or has brought out an
existing bug in Lustre. sanity test 407 is added to the
ALWAYS_EXCPET list.

Seagate-bug-id: MRP-3609
Signed-off-by: Artem Blagodarenko <artem.blagodarenko@seagate.com>
Signed-off-by: James Nunez <james.a.nunez@intel.com>
Change-Id: Idcbff5fd990edbc84539197da9876748b33795dd
Reviewed-on: https://review.whamcloud.com/21398
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>